@@ -108,3 +108,8 @@
         * Ecore_X gains some more x sync counter controls and Ecore_Evas
         now uses the netwm sync protocol to get wm's to only configure
         as fast as it can keep drawing.
+
+2011-04-01  Cedric Bail
+
+	* Add ecore_con_url_pipeline_set and ecore_con_url_pipeline_get for HTTP 1.1
+	pipelining support.
